# cli-timer

./: .gitignore  README.md  pyproject.toml
src/cli_timer/: db.py  main.py  utils.py
